# tlg-writer

./: .gitignore  README.md  pyproject.toml
.agent/: AGENTS.md  NEW_BRANCH_BOILERPLATE.md  PLANS.md  PROGRESS.md  PR_TEMPLATE.md  SPEC.md
.github/workflows/: ci.yml
prompts/brief/: system.md  user.md
prompts/critique/: system.md  user.md
prompts/drafting/: system.md  user.md
prompts/evaluation/: system.md  user.md
prompts/final/: system.md  user.md
prompts/framing/: system.md  user.md
prompts/inputs/: system.md  user.md
prompts/retrieval/: system.md  user.md
prompts/revision/: system.md  user.md
prompts/source_reading/: system.md  user.md
prompts/topic_selection/: system.md  user.md
schemas/json/: corpus_batch_manifest.schema.json  critique_result.schema.json  draft_result.schema.json  editorial_archetype_taxonomy.schema.json  evaluation_result.schema.json  final_deliverable.schema.json  framing_decision.schema.json  gold_set_index.schema.json  inputs_result.schema.json  piece_brief.schema.json  piece_features.schema.json  piece_label.schema.json  pieces_metadata_batch.schema.json  retrieval_result.schema.json  revision_result.schema.json  run_manifest.schema.json  skeleton_stage_output.schema.json  source_reading_result.schema.json  stage_metrics.schema.json  topic_selection_result.schema.json
scripts/: extract_docx_metadata.py  list_editorial_archetypes.py  run_assigned_skeleton.py  run_auto_skeleton.py  run_corpus_batch_stub.py  validate_corpus_piece_json.py  validate_gold_set_index.py
src/tlg_writer/: __init__.py  corpus_batch_stub.py  (+23 more)
(+68 files in other folders)
