[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tlg-writer"
version = "0.0.1"
description = "Observable editorial pipeline for macro advisory pieces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tlg_writer = ["editorial_archetype_taxonomy.v1.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
